nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nc
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nc
  template:
    metadata:
      labels:
        app: nc
    spec:
      containers:
      - name: nc
        securityContext:
          privileged: true
        image: docker.io/library/nextcloud@sha256:5b97169f2f986237472b0a0da84bab98b199cc36439e29f9a9b56d17343b50b4
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: html
        - mountPath: /var/www/html/data
          name: data
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: "/data/nextcloud/data"
            type: DirectoryOrCreate
        - name: html
          hostPath:
            path: "/data/nextcloud/html"
            type: DirectoryOrCreate
