nextcloud/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: cloud.groupe-speleo-quercy.fr
  to:
    kind: Service
    name: nextcloud
